Add website icon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<head>
 		<title>Portfolio by Reign Cyril
 		</title>
-		<meta charset="utf-8" />
+		<meta charset="utf-8"/>
+		<link rel="shortcut icon" type="x-icon" href="images/portfolio_icon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
@@ -29,7 +30,7 @@
 					<section id="one">
 						<header class="major">
 							<h2>🚧 Portfolio website currently under construction 🚧<br />
-							magna sed accumsan arcu neque.</h2>
+							Data Analyt Portfolio Website</h2>
 						</header>
 						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
 					</section>
