--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Portfolio by Reign Cyril
 		</title>
 		<meta charset="utf-8"/>
-		<link rel="shortcut icon" type="x-icon" href="images/portfolio_icon.png">
+		<link rel="shortcut icon" type="x-icon" href="images/portfolio_icon.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
@@ -29,10 +29,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>🚧 Portfolio website currently under construction 🚧<br />
-							Data Analyt Portfolio Website</h2>
+							<h2>🚧 Currently under construction 🚧<br />
+							My Data Analyst Portfolio Website</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>Welcome to my portfolio! I'm a dedicated data analyst on a mission to make sense of numbers and reveal valuable insights. Here, you'll discover a handpicked selection of projects highlighting my expertise in analyzing complex data and creating engaging visualizations. Each project reflects my dedication to turning information into practical intelligence.</p>
 					</section>
 
 				<!-- Two -->
@@ -40,9 +40,16 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/thesis.jpg" class="image fit thumb"><img src="images/thumbs/thesis.jpg" alt="" /></a>
+								<h3><a href="#">Thesis on Sound Source Localization and Counting</a></h3>
+								<p>
+									<ul style="font-size: 10pt; color: #a2a2a2;">
+										<li>Utilized various python packages such as <strong style="color: #555555">Numpy</strong> and <strong style="color: #444444">Scipy</strong> to preprocess the audio signals.</li>
+										<li>Recorded count and angles of sound sources to <strong style="color: #555555">csv files</strong>.</li>
+										<li>Conducted a <strong style="color: #555555">data analysis</strong> on the csv files and used <strong style="color: #444444">Matplotlib</strong> to visualize the data.</li>
+										<li>Extensively used <strong style="color: #555555">Jupyter Notebooks</strong> to build algorithms and conduct analysis</li>
+									</ul>
+								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
