--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="images/avatar.jpg" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>I am Reign Cyril</strong>, an aspiring data engineer currently looking for <strong>Junior Data Analyst</strong> positions.<br />
 				</div>
 			</header>
@@ -40,10 +40,10 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/thesis.jpg" class="image fit thumb"><img src="images/thumbs/thesis.jpg" alt="" /></a>
+								<a href="images/fulls/01-1.jpg" class="image fit thumb"><img src="images/thumbs/01-1.jpg" alt="" /></a>
 								<h3><a href="#">Thesis on Sound Source Localization and Counting</a></h3>
 								<p>
-									<ul style="font-size: 10pt; color: #a2a2a2;">
+									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
 										<li>Utilized various python packages such as <strong style="color: #555555">Numpy</strong> and <strong style="color: #444444">Scipy</strong> to preprocess the audio signals.</li>
 										<li>Recorded count and angles of sound sources to <strong style="color: #555555">csv files</strong>.</li>
 										<li>Conducted a <strong style="color: #555555">data analysis</strong> on the csv files and used <strong style="color: #444444">Matplotlib</strong> to visualize the data.</li>
@@ -53,33 +53,71 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3><a href="#">Web Scraping and ETL Framework in Python</a></h3>
+								<p>
+									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
+										<li>fdhsakhfashjds</li>
+									</ul>
+								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/03-1.jpg" class="image fit thumb"><img src="images/thumbs/03-1.jpg" alt="" /></a>
+								<h3><a href="#">Medical Data Visualizer</a></h3>
+								<p>
+									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
+										<li>fdhsakhfashjds</li>
+									</ul>
+								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/04-1.jpg" class="image fit thumb"><img src="images/thumbs/04-1.jpg" alt="" /></a>
+								<h3><a href="#">Page View Time Series Visualizer</a></h3>
+								<p>
+									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
+										<li>fdhsakhfashjds</li>
+									</ul>
+								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3><a href="#">World Cup Database</a></h3>
+								<p>
+									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
+										<li>fdhsakhfashjds</li>
+									</ul>
+								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3><a href="#">Salon Appointment Scheduler</a></h3>
+								<p>
+									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
+										<li>fdhsakhfashjds</li>
+									</ul>
+								</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+								<h3><a href="#">Periodic Table Database</a></h3>
+								<p>
+									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
+										<li>fdhsakhfashjds</li>
+									</ul>
+								</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+								<h3><a href="#">Notes and Website Blocker Web App in Flask</a></h3>
+								<p>
+									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
+										<li>fdhsakhfashjds</li>
+									</ul>
+								</p>
 							</article>
 						</div>
-						<ul class="actions">
+						<!-- <ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
+						</ul> -->
 					</section>
 
 				<!-- Three -->
@@ -99,7 +137,7 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">reigncyyyril@gmail.com</a>
+										<a href="mailto:reigncyyyril@gmail.com">reigncyyyril@gmail.com</a>
 									</li>
 								</ul>
 							</div>
