--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="shortcut icon" type="x-icon" href="images/portfolio_icon.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<meta property="og:image" content="images/fulls/01-1.jpg" />
 	</head>
 	<body class="is-preload">
 
