Add Open Graph full meta tags

--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
 -->
 <html>
 	<head>
-		<title>Portfolio by Reign Cyril
-		</title>
+		<title>Portfolio by Reign Cyril</title>
 		<meta charset="utf-8"/>
 		<link rel="shortcut icon" type="x-icon" href="images/portfolio_icon.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+	
+		<!-- Open Graph Meta Tags -->
+		<meta property="og:title" content="Portfolio by Reign Cyril" />
+		<meta property="og:description" content="Portfolio showcasing data analyst projects by Reign Cyril" />
+		<meta property="og:url" content="https://reign-cyril-de-vera.github.io/Portfolio" />
 		<meta property="og:image" content="images/fulls/01-1.jpg" />
+		<meta property="og:type" content="website" />
 	</head>
 	<body class="is-preload">
 
