Add Power BI project

--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/powerbi.jpg" class="image fit thumb"><img src="images/thumbs/powerbi.jpg" alt="" /></a>
+								<h3><a href="https://app.powerbi.com/reportEmbed?reportId=689ffb86-7ea0-4530-97e6-8c613267d913&autoAuth=true&ctid=e93c0c9e-286e-4c79-b4cd-be2a9d8ccf16">
+									Data Professional Survey Breakdown in Power BI</a></h3>
+								<p>
+									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
+										<li>fdhsakhfashjds</li>
+									</ul>
+								</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3><a href="#">Web Scraping and ETL Framework in Python</a></h3>
 								<p>
