Added all images

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>🚧 Currently under construction 🚧<br />
-							My Data Analyst Portfolio Website</h2>
+							<h2>🚧 Currently under construction 🚧 My Data Analyst Portfolio Website</h2>
 						</header>
 						<p>Welcome to my portfolio! I'm a dedicated data analyst on a mission to make sense of numbers and reveal valuable insights. Here, you'll discover a handpicked selection of projects highlighting my expertise in analyzing complex data and creating engaging visualizations. Each project reflects my dedication to turning information into practical intelligence.</p>
 					</section>
@@ -48,6 +47,9 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01-1.jpg" class="image fit thumb"><img src="images/thumbs/01-1.jpg" alt="" /></a>
 								<h3><a href="#">Thesis on Sound Source Localization and Counting</a></h3>
+								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
+									Skills: Python, Data Visualization, ETL
+								</p>
 								<p>
 									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
 										<li>Utilized various python packages such as <strong style="color: #555555">Numpy</strong> and <strong style="color: #444444">Scipy</strong> to preprocess the audio signals.</li>
@@ -60,7 +62,11 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/powerbi.jpg" class="image fit thumb"><img src="images/thumbs/powerbi.jpg" alt="" /></a>
 								<h3><a href="https://app.powerbi.com/reportEmbed?reportId=689ffb86-7ea0-4530-97e6-8c613267d913&autoAuth=true&ctid=e93c0c9e-286e-4c79-b4cd-be2a9d8ccf16">
-									Data Professional Survey Breakdown in Power BI</a></h3>
+									Data Professional Survey Breakdown in Power BI
+								</a></h3>
+								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
+									Skills: Power BI
+								</p>
 								<p>
 									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
 										<li>fdhsakhfashjds</li>
@@ -68,8 +74,13 @@
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3><a href="#">Web Scraping and ETL Framework in Python</a></h3>
+								<a href="images/fulls/web_scraping.jpg" class="image fit thumb"><img src="images/thumbs/web_scraping.jpg" alt="" /></a>
+								<h3><a href="https://github.com/reign-cyril-de-vera/Web-Scraping-and-ETL-Framework-in-Python/blob/main/web%20scraping%20python.ipynb">
+									Web Scraping and ETL Framework in Python
+								</a></h3>
+								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
+									Skills: Python, Web Scraping, ETL, SQL
+								</p>
 								<p>
 									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
 										<li>fdhsakhfashjds</li>
@@ -78,7 +89,12 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03-1.jpg" class="image fit thumb"><img src="images/thumbs/03-1.jpg" alt="" /></a>
-								<h3><a href="#">Medical Data Visualizer</a></h3>
+								<h3><a href="https://github.com/reign-cyril-de-vera/boilerplate-medical-data-visualizer/blob/main/medical_data_visualizer.py">
+									Medical Data Visualizer
+								</a></h3>
+								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
+									Skills: Python, Data Visualization
+								</p>
 								<p>
 									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
 										<li>fdhsakhfashjds</li>
@@ -87,7 +103,12 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04-1.jpg" class="image fit thumb"><img src="images/thumbs/04-1.jpg" alt="" /></a>
-								<h3><a href="#">Page View Time Series Visualizer</a></h3>
+								<h3><a href="https://github.com/reign-cyril-de-vera/boilerplate-page-view-time-series-visualizer/blob/main/time_series_visualizer.py">
+									Page View Time Series Visualizer
+								</a></h3>
+								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
+									Skills: Python, Data Visualization
+								</p>
 								<p>
 									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
 										<li>fdhsakhfashjds</li>
@@ -95,8 +116,28 @@
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3><a href="#">World Cup Database</a></h3>
+								<a href="images/fulls/world_cup.jpg" class="image fit thumb"><img src="images/thumbs/world_cup.jpg" alt="" /></a>
+								<h3><a href="https://github.com/reign-cyril-de-vera/World-Cup-Database">
+									World Cup Database
+								</a></h3>
+								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
+									Skills: SQL, PostgreSQL, Linux, Shell Scripting
+								</p>
+								<p>
+									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
+										<li>Constructed a <a href="https://github.com/reign-cyril-de-vera/World-Cup-Database/blob/main/insert_data.sh">shell script</a> in Linux to load data from a csv file to a Postgres <a href="https://github.com/reign-cyril-de-vera/Salon-Appointment-Scheduler/blob/main/salon.sql">database</a>.</li>
+										<li>Developed another <a href="https://github.com/reign-cyril-de-vera/World-Cup-Database/blob/main/queries.sh">shell script</a> to populate with SQL commands for retrieving required data.</li>
+									</ul>
+								</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/salon_scheduler.jpg" class="image fit thumb"><img src="images/thumbs/salon_scheduler.jpg" alt="" /></a>
+								<h3><a href="https://github.com/reign-cyril-de-vera/Salon-Appointment-Scheduler">
+									Salon Appointment Scheduler
+								</a></h3>
+								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
+									Skills: SQL, PostgreSQL, Linux, Shell Scripting
+								</p>
 								<p>
 									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
 										<li>fdhsakhfashjds</li>
@@ -104,29 +145,31 @@
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3><a href="#">Salon Appointment Scheduler</a></h3>
+								<a href="images/fulls/periodic_table.jpg" class="image fit thumb"><img src="images/thumbs/periodic_table.jpg" alt="" /></a>
+								<h3><a href="https://github.com/reign-cyril-de-vera/Periodic-Table-Database">
+									Periodic Table Database
+								</a></h3>
+								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
+									Skills: SQL, PostgreSQL, Linux, Shell Scripting
+								</p>
 								<p>
 									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
-										<li>fdhsakhfashjds</li>
+										<li>Created a <a href="https://github.com/reign-cyril-de-vera/Periodic-Table-Database/blob/main/periodic_table.sql">database</a> for storing elements along with their properties from the periodic table.</li>
+										<li>Implemented a <a href="https://github.com/reign-cyril-de-vera/Periodic-Table-Database/blob/main/element.sh">shell script</a> that receives an element's name, symbol, or atomic number.</li>
+										<li>Checks if the received element is valid and present in the database.</li>
+										<li>Implements a query that returns the details of the specified element.</li>
 									</ul>
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3><a href="#">Periodic Table Database</a></h3>
-								<p>
-									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
-										<li>fdhsakhfashjds</li>
-									</ul>
-								</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+								<a href="images/fulls/web_app.jpg" class="image fit thumb"><img src="images/thumbs/web_app.jpg" alt="" /></a>
 								<h3><a href="#">Notes and Website Blocker Web App in Flask</a></h3>
+								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
+									Skills: Python, Web Development, Git, Github
+								</p>
 								<p>
 									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
-										<li>fdhsakhfashjds</li>
+										<li>Actively used Git and Github for version control</li>
 									</ul>
 								</p>
 							</article>
@@ -149,7 +192,7 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										+63956 402 4144
+										+639564024144
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
