Fixed thesis link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01-1.jpg" class="image fit thumb"><img src="images/thumbs/01-1.jpg" alt="" /></a>
-								<h3><a href="#">Thesis on Sound Source Localization and Counting</a></h3>
+								<h3><a href="https://github.com/reign-cyril-de-vera/Thesis-Data-Visualization/blob/main/thesis.ipynb">
+									Thesis on Sound Source Localization and Counting
+								</a></h3>
 								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
 									Skills: Python, Data Visualization, ETL
 								</p>
@@ -54,8 +56,8 @@
 									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
 										<li>Utilized various python packages such as <strong style="color: #555555">Numpy</strong> and <strong style="color: #444444">Scipy</strong> to preprocess the audio signals.</li>
 										<li>Recorded count and angles of sound sources to <strong style="color: #555555">csv files</strong>.</li>
-										<li>Conducted a <strong style="color: #555555">data analysis</strong> on the csv files and used <strong style="color: #444444">Matplotlib</strong> to visualize the data.</li>
-										<li>Extensively used <strong style="color: #555555">Jupyter Notebooks</strong> to build algorithms and conduct analysis</li>
+										<li>Conducted data analysis on the csv files and used <strong style="color: #444444">Matplotlib</strong> to visualize the data.</li>
+										<li>Extensively used <strong style="color: #555555">Jupyter Notebooks</strong> to build algorithms and conduct analysis.</li>
 									</ul>
 								</p>
 							</article>
@@ -126,7 +128,7 @@
 								<p>
 									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
 										<li>Constructed a <a href="https://github.com/reign-cyril-de-vera/World-Cup-Database/blob/main/insert_data.sh">shell script</a> in Linux to load data from a csv file to a Postgres <a href="https://github.com/reign-cyril-de-vera/Salon-Appointment-Scheduler/blob/main/salon.sql">database</a>.</li>
-										<li>Developed another <a href="https://github.com/reign-cyril-de-vera/World-Cup-Database/blob/main/queries.sh">shell script</a> to populate with SQL commands for retrieving required data.</li>
+										<li>Developed another <a href="https://github.com/reign-cyril-de-vera/World-Cup-Database/blob/main/queries.sh">shell script</a> populated with SQL commands for retrieving required data.</li>
 									</ul>
 								</p>
 							</article>
@@ -169,7 +171,7 @@
 								</p>
 								<p>
 									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
-										<li>Actively used Git and Github for version control</li>
+										<li>Actively used Git and Github for version control.</li>
 									</ul>
 								</p>
 							</article>
