Edited logo line

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>Portfolio by Reign Cyril</title>
 		<meta charset="utf-8"/>
-		<link rel="shortcut icon" type="x-icon" href="images/portfolio_icon.png"/>
+		<link runat="server" rel="icon" type="image/png" href="~/images/portfolio_icon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	
@@ -165,7 +165,9 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/web_app.jpg" class="image fit thumb"><img src="images/thumbs/web_app.jpg" alt="" /></a>
-								<h3><a href="#">Notes and Website Blocker Web App in Flask</a></h3>
+								<h3><a href="https://flask-web-app-reign-cyril-e1280b7ef6f7.herokuapp.com/">
+									Notes and Website Blocker Web App in Flask
+								</a></h3>
 								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
 									Skills: Python, Web Development, Git, Github
 								</p>
