Add descriptions and emojis

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>Portfolio by Reign Cyril</title>
 		<meta charset="utf-8"/>
-		<link runat="server" rel="icon" type="image/png" href="~/images/portfolio_icon.png" />
+		<link rel="icon" href="images/portfolio_icon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	
@@ -35,9 +35,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>🚧 Currently under construction 🚧 My Data Analyst Portfolio Website</h2>
+							<h2>📊 My Data Analyst Portfolio 📊</h2>
 						</header>
-						<p>Welcome to my portfolio! I'm a dedicated data analyst on a mission to make sense of numbers and reveal valuable insights. Here, you'll discover a handpicked selection of projects highlighting my expertise in analyzing complex data and creating engaging visualizations. Each project reflects my dedication to turning information into practical intelligence.</p>
+						<p>Welcome to my portfolio! I'm a dedicated data analyst on a mission to make sense of numbers and reveal valuable insights 🔎. Here, you'll discover a handpicked selection of projects highlighting my expertise in analyzing complex data and creating engaging visualizations 📈. Each project reflects my dedication to turning information into practical intelligence 🥸.</p>
 					</section>
 
 				<!-- Two -->
@@ -47,7 +47,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01-1.jpg" class="image fit thumb"><img src="images/thumbs/01-1.jpg" alt="" /></a>
 								<h3><a href="https://github.com/reign-cyril-de-vera/Thesis-Data-Visualization/blob/main/thesis.ipynb">
-									Thesis on Sound Source Localization and Counting
+									🔊 Data Analysis for Thesis on Sound Source Localization and Counting
 								</a></h3>
 								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
 									Skills: Python, Data Visualization, ETL
@@ -64,70 +64,96 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/powerbi.jpg" class="image fit thumb"><img src="images/thumbs/powerbi.jpg" alt="" /></a>
 								<h3><a href="https://app.powerbi.com/reportEmbed?reportId=689ffb86-7ea0-4530-97e6-8c613267d913&autoAuth=true&ctid=e93c0c9e-286e-4c79-b4cd-be2a9d8ccf16">
-									Data Professional Survey Breakdown in Power BI
+									🧑‍🏫 Data Professional Survey Breakdown in Power BI
 								</a></h3>
 								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
-									Skills: Power BI
+									Skills: Power BI (Load, Transform, Visualize)
 								</p>
 								<p>
 									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
-										<li>fdhsakhfashjds</li>
+										<li>Enables analysis on a survey conducted on data professionals on their favorite programming language, salary, work-life balance, and difficulty breaking into data.</li>
+										<li>Loaded data from an <strong style="color: #444444">Excel file</strong> and cleaned data for analysis.</li>
+										<li>Utilized <strong style="color: #444444">cards, gauges, a bar chart, a column chart, a treemap, and a doughnut chart</strong> to support analysis of the data.</li>
+									</ul>
+								</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/web_app.jpg" class="image fit thumb"><img src="images/thumbs/web_app.jpg" alt="" /></a>
+								<h3><a href="https://flask-web-app-reign-cyril-e1280b7ef6f7.herokuapp.com/">
+									📱 Notes and Website Blocker Web App in Flask
+								</a></h3>
+								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
+									Skills: Python, Web Development, Git, Github, SQL
+								</p>
+								<p>
+									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
+										<li>Used <strong style="color: #444444">Flask</strong> library in Python to make the website blocker and note-taking apps.</li>
+										<li>Note-taking app uses a <strong style="color: #444444">SQLite</strong> database using <strong style="color: #444444">SQLAlchemy</strong> object relational mapping (ORM) to store notes.</li>
+										<li>Actively used <a href="https://github.com/reign-cyril-de-vera/First-Web-App-v2/tree/main">Git and Github</a> during development for version control.</li>
+										<li>Deployed the web app into <strong style="color: #444444">Heroku</strong> hosting site.</li>
+										<li>The website blocker utilizes the <strong style="color: #444444">local device's hosts file</strong> and, as a result, will not function on an online server.</li>
 									</ul>
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/web_scraping.jpg" class="image fit thumb"><img src="images/thumbs/web_scraping.jpg" alt="" /></a>
 								<h3><a href="https://github.com/reign-cyril-de-vera/Web-Scraping-and-ETL-Framework-in-Python/blob/main/web%20scraping%20python.ipynb">
-									Web Scraping and ETL Framework in Python
+									🌐 Web Scraping and ETL Framework in Python
 								</a></h3>
 								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
 									Skills: Python, Web Scraping, ETL, SQL
 								</p>
 								<p>
 									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
-										<li>fdhsakhfashjds</li>
+										<li>Used a <strong style="color: #444444">Jupyter Notebook</strong> to implement the Python script for the project.</li>
+										<li>Utilized <strong style="color: #444444">BeautifulSoup</strong> to web scrape data from a Wikipedia table.</li>
+										<li>Loaded the extracted data into a <strong style="color: #444444">SQLite</strong> database.</li>
+										<li>Transformed the data using <strong style="color: #444444">Pandas</strong> and <strong style="color: #444444">Numpy</strong> libraries in Python.</li>
+										<li>Conducted several SQL queries to verify data retrieval from the database.</li>
 									</ul>
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03-1.jpg" class="image fit thumb"><img src="images/thumbs/03-1.jpg" alt="" /></a>
 								<h3><a href="https://github.com/reign-cyril-de-vera/boilerplate-medical-data-visualizer/blob/main/medical_data_visualizer.py">
-									Medical Data Visualizer
+									⚕️ Medical Data Visualizer
 								</a></h3>
 								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
 									Skills: Python, Data Visualization
 								</p>
 								<p>
 									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
-										<li>fdhsakhfashjds</li>
+										<li>Utilized <strong style="color: #444444">Pandas</strong> to load and transform data from a csv file for analysis.</li>
+										<li>Used <strong style="color: #444444">Seaborn</strong> and <strong style="color: #444444">Matplotlib</strong> to construct a categorical bar graph to visualize the count of people with issues in their health, and a heat map to determine the correlation between each variable in the dataset.</li>
 									</ul>
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04-1.jpg" class="image fit thumb"><img src="images/thumbs/04-1.jpg" alt="" /></a>
 								<h3><a href="https://github.com/reign-cyril-de-vera/boilerplate-page-view-time-series-visualizer/blob/main/time_series_visualizer.py">
-									Page View Time Series Visualizer
+									📈 Page View Time Series Visualizer
 								</a></h3>
 								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
 									Skills: Python, Data Visualization
 								</p>
 								<p>
 									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
-										<li>fdhsakhfashjds</li>
+										<li>Utilized <strong style="color: #444444">Pandas</strong> to load and transform data from a csv file for analysis.</li>
+										<li>Used <strong style="color: #444444">Seaborn</strong> and <strong style="color: #444444">Matplotlib</strong> to construct a clustered column chart, a line chart, and box plots to visualize and analyze a website’s page views with respect to time.</li>
 									</ul>
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/world_cup.jpg" class="image fit thumb"><img src="images/thumbs/world_cup.jpg" alt="" /></a>
 								<h3><a href="https://github.com/reign-cyril-de-vera/World-Cup-Database">
-									World Cup Database
+									🏆 World Cup Database
 								</a></h3>
 								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
 									Skills: SQL, PostgreSQL, Linux, Shell Scripting
 								</p>
 								<p>
 									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
-										<li>Constructed a <a href="https://github.com/reign-cyril-de-vera/World-Cup-Database/blob/main/insert_data.sh">shell script</a> in Linux to load data from a csv file to a Postgres <a href="https://github.com/reign-cyril-de-vera/Salon-Appointment-Scheduler/blob/main/salon.sql">database</a>.</li>
+										<li>Constructed a <a href="https://github.com/reign-cyril-de-vera/World-Cup-Database/blob/main/insert_data.sh">shell script</a> in <strong style="color: #444444">Linux</strong> to load data from a csv file to a <strong style="color: #444444">PostgreSQL</strong> <a href="https://github.com/reign-cyril-de-vera/Salon-Appointment-Scheduler/blob/main/salon.sql">database</a>.</li>
 										<li>Developed another <a href="https://github.com/reign-cyril-de-vera/World-Cup-Database/blob/main/queries.sh">shell script</a> populated with SQL commands for retrieving required data.</li>
 									</ul>
 								</p>
@@ -135,45 +161,33 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/salon_scheduler.jpg" class="image fit thumb"><img src="images/thumbs/salon_scheduler.jpg" alt="" /></a>
 								<h3><a href="https://github.com/reign-cyril-de-vera/Salon-Appointment-Scheduler">
-									Salon Appointment Scheduler
+									💆 Salon Appointment Scheduler
 								</a></h3>
 								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
 									Skills: SQL, PostgreSQL, Linux, Shell Scripting
 								</p>
 								<p>
 									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
-										<li>fdhsakhfashjds</li>
+										<li>Uses <strong style="color: #444444">Linux</strong> command line to enable a salon’s customers to schedule appointments through a <a href="https://github.com/reign-cyril-de-vera/Salon-Appointment-Scheduler/blob/main/salon.sh">shell script</a>.</li>
+										<li>Created a <strong style="color: #444444">PostgreSQL</strong> <a href="https://github.com/reign-cyril-de-vera/Salon-Appointment-Scheduler/blob/main/salon.sql">database</a> to store salon’s services, customer details, and appointment details.</li>
+										<li>Updates the database to match the status of customers’ appointments.</li>
 									</ul>
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/periodic_table.jpg" class="image fit thumb"><img src="images/thumbs/periodic_table.jpg" alt="" /></a>
 								<h3><a href="https://github.com/reign-cyril-de-vera/Periodic-Table-Database">
-									Periodic Table Database
+									🧪 Periodic Table Database
 								</a></h3>
 								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
 									Skills: SQL, PostgreSQL, Linux, Shell Scripting
 								</p>
 								<p>
 									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
-										<li>Created a <a href="https://github.com/reign-cyril-de-vera/Periodic-Table-Database/blob/main/periodic_table.sql">database</a> for storing elements along with their properties from the periodic table.</li>
-										<li>Implemented a <a href="https://github.com/reign-cyril-de-vera/Periodic-Table-Database/blob/main/element.sh">shell script</a> that receives an element's name, symbol, or atomic number.</li>
+										<li>Created a <strong style="color: #444444">PostgreSQL</strong> <a href="https://github.com/reign-cyril-de-vera/Periodic-Table-Database/blob/main/periodic_table.sql">database</a> for storing elements along with their properties from the periodic table.</li>
+										<li>Implemented a <strong style="color: #444444">Linux</strong> <a href="https://github.com/reign-cyril-de-vera/Periodic-Table-Database/blob/main/element.sh">shell script</a> that receives an element's name, symbol, or atomic number.</li>
 										<li>Checks if the received element is valid and present in the database.</li>
 										<li>Implements a query that returns the details of the specified element.</li>
-									</ul>
-								</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/web_app.jpg" class="image fit thumb"><img src="images/thumbs/web_app.jpg" alt="" /></a>
-								<h3><a href="https://flask-web-app-reign-cyril-e1280b7ef6f7.herokuapp.com/">
-									Notes and Website Blocker Web App in Flask
-								</a></h3>
-								<p style="font-size: 11pt; color: #555555; line-height: 1.75">
-									Skills: Python, Web Development, Git, Github
-								</p>
-								<p>
-									<ul style="font-size: 10pt; color: #a2a2a2; line-height: 1.75">
-										<li>Actively used Git and Github for version control.</li>
 									</ul>
 								</p>
 							</article>
